# OPBB

./: .gitignore  API_KEYS_SETUP.md  BUILD_OPENBB_WITH_ROIC.md  COMPLETE_API_SETUP.md  FORECAST_SUMMARY.md  GITHUB_REPO_CREATED.md  HOW_TO_LAUNCH.md  LICENSE  LOCAL_OPENBB_BUILD_GUIDE.md  OPENBB_BACKENDS_CONFIGURATION.md  OPENBB_BACKEND_TROUBLESHOOTING.md  OPENBB_OFFICIAL_BACKEND.md  OPENBB_PRACTICAL_EXAMPLES.md  OPENBB_PRO_BACKEND_INTEGRATION.md  OPENBB_QUICK_REFERENCE.md  OPENBB_ROIC_REBUILD_SUCCESS.md  OPENBB_USER_MANUAL.md  POLYGON_API_SETUP.md  PREMIUM_SETUP_COMPLETE.md  README.md  ROIC_CLI_INTEGRATION.md  ROIC_DISPLAY_STYLES.md  ROIC_FIXED.md  ROIC_HISTORICAL_600519.md  ROIC_INTEGRATED.md  ROIC_INTEGRATION_SUCCESS.md  ROIC_OPENBB_DISPLAY.md  analyze  build_openbb_with_roic.sh  commodity_dashboard_fred.py  commodity_guide.md  company_forecast_guide.md  current_roic_workflow.md  demo_openbb.py  economic_dashboard.py  fred_economic_examples.py  fred_economic_guide.md  get_aapl_news.py  get_apple_data.py  get_apple_news_polygon.py  (+56 more)
openbb_roic_provider_package/: README.md  pyproject.toml  setup.py
openbb_roic_provider_package/openbb_roic/: __init__.py  utils.py
openbb_roic_provider_package/openbb_roic/models/: __init__.py  fundamental_metrics.py  quality_forecast.py
